[tool.poetry]
name = "ethutils"
version = "0.1.1"
description = "Utilities for the Analysis of Ethereum Smart Contracts"
authors = ["Gernot Salzer (gsalzer)"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cbor2 = "^5.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
